# lyrics-next

./: Cargo.toml  README.md  lyrics.toml  readme.md
.github/workflows/: lint.yml  release.yml
documents/: player-architecture.md  tui-optimization.md
locales/: en.toml  zh.toml
src/: cache.rs  client.rs  config.rs  error.rs  lib.rs  log.rs  main.rs  player.rs  song.rs  ui.rs  utils.rs
src/client/: kugou.rs  netease.rs  ovh.rs  qqmusic.rs
src/player/: mpd.rs  mpris.rs
src/ui/: help.rs  lyrics.rs  search.rs
