[package]
name = "lyrics-next"
version = "0.1.3"
edition = "2024"
authors = ["erasin <erasinoo@gmail.com>"]
description = "在终端下为 mpris 提供歌词."
license = "MIT"
readme = "README.md"
repository = "https://github.com/erasin/lyrics-next"
keywords = ["lyrics", "tui", "ratatui", "mpris"]

[dependencies]
anyhow = "1.0"
async-trait = "0.1.88"
base64 = "0.22.1"
chrono = "0.4.40"
clap = { version = "4.5", features = ["derive"] }
crossterm = { version = "0.29", features = ["event-stream"] }
dirs = "6.0"
env_logger = "0.11.8"
log = "0.4.27"
ratatui = "0.29"
reqwest = { version = "0.12", features = ["json"] }
sanitize-filename = "0.6"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0"
thiserror = "2"
tokio = { version = "1.44", features = ["rt-multi-thread", "macros", "fs"] }
tokio-stream = "0.1.17"
toml = "0.8.20"
# dbus
mpris = "2.0.1"

[profile.opt]
inherits = "release"
lto = "fat"
codegen-units = 1
strip = true
opt-level = 3
